<resources>
    <string name="app_name">NutriCampus</string>
    <string name="switch_ativo">Ativo</string>
    <string name="switch_inativo">Inativo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
...
    <string name="titulo_editar_prole">Editar prole</string>
    <string name="titulo_lista_propriedade">Propriedades</string>
    <string name="titulo_lista_compostos_alimentares">Compostos Alimentares</string>
    <string name="titulo_add_propriedade">Nova propriedade</string>
    <string name="titulo_editar_propriedade">Editar propriedade</string>
    <string name="titulo_editar_producao">Editar produção de leite</string>
    <string name="titulo_producao">Produção de leite</string>
    <string name="titulo_lista_animais">Animais</string>
    <string name="titulo_editar_conta">Configurações de Conta</string>

    <string name="cadastrar_proprietario"> Cadastrar Proprietario</string>
    <string name="campo_buscar_proprietario_nome">Buscar Proprietário (CPF)</string>

...

    <string name="campo_peso">Peso (kg)</string>
    <string name="campo_natimorto">Natimorto</string>

    <string name="msg_senha_enviada">Senha enviada por e-mail</string>
    <string name="msg_sem_internet">Infelizmente não foi detectada uma conexão com a internet</string>
    <string name="menu_ver_producao_leite">Ver produção de leite</string>
    <string name="menu_ver_prole">Ver prole</string>
    <string name="msg_selecione_propriedade">Por favor, selecione uma propriedade cadastrada.</string>
    <string name="text_floating_propriedade">Propriedade</string>
    <string name="text_floating_proprietarios">Proprietários</string>

    <string name="campo_composto">Nome do Composto</string>
...
