<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nutricampus.app.activities.ListaProducaoLeiteActivity">


    <include layout="@layout/content_lista_producao" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_producao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_light" />

</android.support.design.widget.CoordinatorLayout>